tests/paczka1/fuzzy1/55878307.err
Error in line 10: hOEARP S114 12,34
Error in line 12: A460 A195 72,7
Error in line 3: B3NJTcrPTe S967 30,7
Error in line 8: hOEARP A460 66,0
Error in line 26: hOEARP S967 27,9
